examples/passing/s.ps
s = \x y z -> x z (y z)
