examples/failing/TypeError.ps
test = \f -> \x, y, z -> f x y + f x y z
